--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hyunseok Oh Portfolio</title>
+    <title>Minwoo Hyun's Personal Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -95,7 +95,7 @@
                                     <ul class="dropdown">
                                         <li><a href="#pt-section" class="nav-link">Presentations</a></li>
                                         <li><a href="#skill-section" class="nav-link">Programming Skills</a></li>
-                                        <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li>
+                                        <!-- <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li> -->
                                     </ul>
                                 </li>
                                 <!-- <li><a href="#skill-section" class="nav-link">Computer Skills</a></li> -->
@@ -408,7 +408,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Oral Presentation in International Association for Energy Economics</a></h3>
+                        <h3 class="h3 mb-4">Oral Presentation in International Association for Energy Economics</h3>
                     </div>
                 </div>
 
@@ -423,7 +423,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Oral Presentation in International Association for Energy Economics</a></h3>
+                        <h3 class="h3 mb-4">Oral Presentation in International Association for Energy Economics</h3>
                     </div>
                 </div>
 
@@ -664,15 +664,15 @@
                     <div class="col-md-1">
                     </div>
                     <div class="col-md-5 mb-5">
-                        <h2 class="footer-heading mb-4">About Me</h2>
-                        <p>Minwoo Hyun</p>
-                        <p>Quantum Physicist/Engineer, Machine Learning Researcher</p>
-                        <a href="https://www.facebook.com/hyunseok.oh.927/" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                        <a href="https://www.linkedin.com/in/hyunseok-oh-65031b1ab/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                        <h2 class="footer-heading mb-4">Minwoo Hyun</h2>
+                        <!-- <p>Minwoo Hyun</p>
+                        <p>Quantum Physicist/Engineer, Machine Learning Researcher</p> -->
+                        <!-- <a href="https://www.facebook.com/hyunseok.oh.927/" class="pl-0 pr-3"><span class="icon-facebook"></span></a> -->
+                        <!-- <a href="https://www.linkedin.com/in/hyunseok-oh-65031b1ab/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a> -->
                     </div>
                     <div class="col-md-1">
                     </div>
-                    <div class="col-md-5 ml-auto">
+                    <!-- <div class="col-md-5 ml-auto">
                         <h2 class="footer-heading mb-4">Quick Links</h2>
                         <ul class="list-unstyled">
                             <li><a href="#about-section" class="smoothscroll">About Me</a></li>
@@ -680,7 +680,7 @@
                             <li><a href="#skill-section" class="smoothscroll">Computer Skills</a></li>
                             <li><a href="#contact-section" class="smoothscroll">Contact</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row pt-5 text-center">
                     <div class="col-md-12">
