--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">University of California, Santa Barbara</a></h3>
+                        <h3 class="h3 mb-4"><a href="https://econ.ucsb.edu/">University of California, Santa Barbara</a></h3>
                         <h5 class="h5 mb-4 text-black">Ph.D. Student in Economics</h5>
                         <ul class="list-unstyled ul-check success">
                             <!-- <li></li> -->
@@ -212,7 +212,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Korea Advanced Institute of Science and Technology (KAIST)</a></h3>
+                        <h3 class="h3 mb-4"><a href="https://www.business.kaist.edu/">Korea Advanced Institute of Science and Technology (KAIST)</a></h3>
                         <h5 class="h5 mb-4 text-black">M.S. in Green Business and Policy, Feb 2019</h5>
                         <ul class="list-unstyled ul-check success">
                             <li><em>Honors with Master's Thesis</em></li>
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Yonsei University</a></h3>
+                        <h3 class="h3 mb-4"><a href="https://www.yonsei.ac.kr/en_sc/index.jsp">Yonsei University</a></h3>
                         <h5 class="h5 mb-4 text-black">B.S. in Chemical Engineering, Feb 2017</h5>
                         <ul class="list-unstyled ul-check success">
                             <li><em>Honors with Academic Excellence</em></li>
@@ -329,7 +329,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Intermediate Microeconomic Theory</a></h3>
+                        <h3 class="h3 mb-4"><a href="https://minwoo-hyun.github.io/#teaching-section">Intermediate Microeconomic Theory</a></h3>
                         <!-- <h5 class="h5 mb-4 text-black">Research Associate</h5> -->
                         <ul class="list-unstyled ul-check success">
                             <!-- <li></li> -->
@@ -359,7 +359,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Sustainable Development Research Center, KAIST</a></h3>
+                        <h3 class="h3 mb-4"><a href="https://minwoo-hyun.github.io/#experience-section">Sustainable Development Research Center, KAIST</a></h3>
                         <h5 class="h5 mb-4 text-black">Research Associate</h5>
                         <ul class="list-unstyled ul-check success">
                             <!-- <li></li> -->
@@ -378,7 +378,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
+                        <h3 class="h3 mb-4"><a href="http://kaistceps.quv.kr">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
                         <h5 class="h5 mb-4 text-black">Research Assistant</h5>
                         <ul class="list-unstyled ul-check success">
                             <li>TBD</li>
