change class for experience

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
         </section>
 
-        <section class="site-section bg-light" id="experience-section">
+        <section class="site-section" id="experience-section">
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
