--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3>
-                            <p>My resaerch interest lies at energy and environmental economics.</p>
+                            <p>My research interest lies at energy and environmental economics.</p>
 
                         </div>
 
@@ -303,6 +303,7 @@
                             </li>
                             <li>J. Eom, <b>M. Hyun</b>, J. Lee, and H. Lee (2020), <a href="https://doi.org/10.1038/s41560-020-00698-1">“Increase in household energy consumption due to ambient air pollution”</a>,
                                 <em>Nature Energy</em>, 1-9.
+                            </li>
                         </ul>
 
                     </div>
@@ -361,8 +362,9 @@
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h3 class="h3 mb-4"><a href="https://minwoo-hyun.github.io/#experience-section">Sustainable Development Research Center, KAIST</a></h3>
                         <h5 class="h5 mb-4 text-black">Research Associate</h5>
-                        <ul class="list-unstyled ul-check success">
-                            <!-- <li></li> -->
+                        <ul class="list-unstyled ul-check success">         
+                            <li>Project Title: "Load Impact Evaluation for a Korean Peak Time Rebate Pilot with Residential and Small Commercial and Industrial Customers" (<a href="https://www.epri.com/research/products/000000003002016695">Technical Report</a>)</li>
+                            <li>Project Title: "<a href="https://cordis.europa.eu/project/id/821471">Exploring National and Global Actions to reduce Greenhouse gas Emissions</a>"</li>
                         </ul>
                     </div>
                 </div>
@@ -374,15 +376,15 @@
                     </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Apr 2020 - Jul 2020</p>
+                        <p>Jul 2017 - Jan 2019</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h3 class="h3 mb-4"><a href="http://kaistceps.quv.kr">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
                         <h5 class="h5 mb-4 text-black">Research Assistant</h5>
-                        <ul class="list-unstyled ul-check success">
+                        <!-- <ul class="list-unstyled ul-check success">
                             <li>TBD</li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
 
@@ -408,7 +410,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4">Oral Presentation in International Association for Energy Economics</h3>
+                        <h3 class="h3 mb-4"><a href="https://www.iaee.org/proceedings/article/16312">Oral Presentation in International Association for Energy Economics</a></h3>
                     </div>
                 </div>
 
@@ -423,7 +425,7 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4">Oral Presentation in International Association for Energy Economics</h3>
+                        <h3 class="h3 mb-4"><a href="https://www.iaee.org/proceedings/article/15033">Oral Presentation in International Association for Energy Economics</a></h3>
                     </div>
                 </div>
 
