--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
-                        <ul class="list-unstyled ul-check primary text-black">
+                        <ul class="list-unstyled ul-check success text-black">
                             <li><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
                                 <em>Energy Policy</em>, 147, 111918.
                             </li>
@@ -313,30 +313,54 @@
 
         <section class="site-section bg-light" id="teaching-section">
             <div class="container">
-                <div class="row mb-5 justify-content-center">
-                    <div class="col-12 text-center" data-aos="fade">
+                <div class="row mb-5">
+                    <div class="col-12 text-center" data-aos="fade-up">
                         <h2 class="section-title mb-3">Teaching</h2>
                     </div>
                 </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Fall 2020</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://minwoo-hyun.github.io/#teaching-section">Intermediate Microeconomic Theory</a></h3>
-                        <!-- <h5 class="h5 mb-4 text-black">Research Associate</h5> -->
-                        <ul class="list-unstyled ul-check success">
-                            <!-- <li></li> -->
-                        </ul>
+    
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h3 class="h3 mb-4 text-black">2020-2021</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
                     </div>
                 </div>
+
+                <!-- <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h3 class="h3 mb-4 text-black">2020-2021</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h3 class="h3 mb-4 text-black">2020-2021</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h3 class="h3 mb-4 text-black">2020-2021</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h3 class="h3 mb-4 text-black">2020-2021</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h3 class="h3 mb-4 text-black">2020-2021</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
+                    </div>
+                </div> -->
+
 
             </div>
         </section>
@@ -400,32 +424,24 @@
                 </div>
 
                 <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
                         <p>Jun 2019</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.iaee.org/proceedings/article/16312">Oral Presentation in International Association for Energy Economics</a></h3>
+                        <h3 class="h4 mb-4"><a href="https://www.iaee.org/proceedings/article/16312">Oral Presentation in International Association for Energy Economics</a></h3>
                     </div>
                 </div>
 
                 <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
                         <p>Jun 2018</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.iaee.org/proceedings/article/15033">Oral Presentation in International Association for Energy Economics</a></h3>
+                        <h3 class="h4 mb-4"><a href="https://www.iaee.org/proceedings/article/15033">Oral Presentation in International Association for Energy Economics</a></h3>
                     </div>
                 </div>
 
