--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
 
-        <div class="site-blocks-cover overlay" style="background-image: url(images/title_back_grey.jpg);" data-aos="fade" id="home-section">
+        <div class="site-blocks-cover overlay" style="background-image: url(images/background_figure1.jpg);" data-aos="fade" id="home-section">
 
             <div class="container">
                 <div class="row align-items-center justify-content-center">
@@ -321,8 +321,8 @@
     
                 <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
-                        <h3 class="h3 mb-4 text-black">2020-2021</h3>
-                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
+                        <h3 class="h3 mb-4 text-black">2020 - 2021</h3>
+                        <h5 class="h5 mb-4 text-black">Fall 2020:  <a href="teaching_20f.html">[ECON 10A] Intermediate Microeconomic Theory</a></h5>
                     </div>
                 </div>
 
@@ -417,6 +417,38 @@
 
         <section class="site-section bg-light" id="pt-section">
             <div class="container">
+                <div class="row mb-5">
+                    <div class="col-12 text-center" data-aos="fade-up">
+                        <h2 class="section-title mb-3">Presentations</h2>
+                    </div>
+                </div>
+    
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h4 class="h4 mb-4 text-black">42<sup>nd</sup> International Association for Energy Economics (IAEE) International Conference (2019)</h4>
+                        <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/16312">Oral Presentation in Concurrent Session</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h4 class="h4 mb-4 text-black">41<sup>st</sup> International Association for Energy Economics (IAEE) International Conference (2018)</h4>
+                        <h5 class="h5 mb-5"><a href="https://www.iaee.org/proceedings/article/15033">Oral Presentation in Concurrent Session</a></h5>
+                    </div>
+                </div>
+
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                    <div class="col-12">
+                        <h4 class="h4 mb-4 text-black">29<sup>th</sup> Production and Operations Management Society (POMS) Annual Conference (2018)</h4>
+                        <h5 class="h5 mb-5">Oral Presentation in Invited Session</h5>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- <section class="site-section bg-light" id="pt-section">
+            <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
                         <h2 class="section-title mb-3">Presentations</h2>
@@ -446,8 +478,7 @@
                 </div>
 
             </div>
-        </section>
-
+        </section> -->
 
         <!-- <section class='site-section' id="research-section">
             <div class="container">
@@ -539,7 +570,7 @@
                             <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-code"></span></div>
                             <div>
                                 <!-- <h3>Programming Languages</h3> -->
-                                <p>Fluent: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</p>
+                                <p>Proficient: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</p>
                             </div>
                         </div>
                     </div>
