--- a/teaching_20f.html
+++ b/teaching_20f.html
@@ -107,19 +107,19 @@
         <div class="container">
             <div class="row mb-5">
                 <div class="col-12 text-center" data-aos="fade-up">
-                    <h2 class="section-title mb-3">ECON10A: Intermediate Microeconomic Theory</h2>
+                    <h2 class="section-title mb-3">[ECON 10A] Intermediate Microeconomic Theory</h2>
                 </div>
             </div>
 
             <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                 <div class="col-12">
-                    <h5 class="h5 mb-4 text-black">Lecturer: John Hartman</h5>
-                    <h5 class="h5 mb-4 text-black">TA: Minwoo Hyun</h5>
+                    <h5 class="h5 mb-4 text-black">Fall Quarter 2020</h5>
+                    <h5 class="h5 mb-4 text-black">Lecturer: Alisa Tazhitdinova, John Hartman, and Youssef Benzarti</h5>
 
                 </div>
             </div>
 
-            <div class="row exp-item bg-light mb-3" data-aos="fade-up" data-aos-delay="">
+            <!-- <div class="row exp-item bg-light mb-3" data-aos="fade-up" data-aos-delay="">
                 <div class="col-12">
                     <h5 class="h5 mb-4 text-black">Problem Set</h5>
                     <ul class="list-unstyled ul-check success">
@@ -129,9 +129,9 @@
                         <li>Problem Set 4 (Due: Dec 03)</li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="row exp-item bg-light mb-3" data-aos="fade-up" data-aos-delay="">
+            <!-- <div class="row exp-item bg-light mb-3" data-aos="fade-up" data-aos-delay="">
                 <div class="col-12">
                     <h5 class="h5 mb-4 text-black">Problem Solution</h5>
                     <ul class="list-unstyled ul-check success">
@@ -141,7 +141,7 @@
                         <li>Problem Solution 4 (Due: Dec 03)</li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
         </div>
         
     </section>
