--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167402084-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7E2DF0DFKJ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -35,7 +35,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'UA-167402084-1');
+        gtag('config', 'G-7E2DF0DFKJ');
     </script>
 
 </head>
