--- a/index.html
+++ b/index.html
@@ -324,14 +324,14 @@
                     </div>
                 </div>
 
-                <!-- <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <h3 class="h3 mb-4 text-black">2020-2021</h3>
-                        <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
+                        <h5 class="h5 mb-4 text-black">Winter 2021 -  <a href="teaching_21w.html">ECON 2: Principles of Macroeconomics</a></h5>
                     </div>
                 </div>
 
-                <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
+                <!-- <div class="row exp-item mb-3" data-aos="fade-up" data-aos-delay="">
                     <div class="col-12">
                         <h3 class="h3 mb-4 text-black">2020-2021</h3>
                         <h5 class="h5 mb-4 text-black">Fall 2020 -  <a href="teaching_20f.html">ECON 10A: Intermediate Microeconomic Theory</a></h5>
