--- a/teaching_21w.html
+++ b/teaching_21w.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167402084-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167402084-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -36,7 +36,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-167402084-1');
-    </script>
+    </script> -->
 
 </head>
 
