--- a/teaching_21s.html
+++ b/teaching_21s.html
@@ -78,6 +78,8 @@
 
                                 <li><a href="index.html#publication-section" class="nav-link">Publications</a></li>
 
+                                <li><a href="index.html#wp-section" class="nav-link">Working Papers</a></li>
+
                                 <li><a href="index.html#teaching-section" class="nav-link">Teaching</a></li>
 
                                 <li class="has-children">
