--- a/index.html
+++ b/index.html
@@ -83,9 +83,13 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="#publication-section" class="nav-link">Publications</a></li>
+                                <li class="has-children">
+                                    <a href="#publication-section" class="nav-link">Publications</a>
 
-                                <li><a href="#wp-section" class="nav-link">Working Papers</a></li>
+                                    <ul class="dropdown">
+                                        <li><a href="#wp-section" class="nav-link">Working Papers</a></li>
+                                    </ul>
+                                </li>
 
                                 <li><a href="#teaching-section" class="nav-link">Teaching</a></li>
 
@@ -322,7 +326,7 @@
                 <div class="row">
                     <div class="col-12" data-aos="fade-up">
                         <ul class="list-unstyled ul-check success text-black">
-                            <li>J. lee and <b>M. Hyun</b> (2021), “Do pollution alerts improve health outcomes?: Evidence from South Korean particulate matter advisories”
+                            <li>J. Lee and <b>M. Hyun</b> (2021), “Do pollution alerts improve health outcomes?: Evidence from South Korean particulate matter advisories”
                             </li>
                             <li><b>M. Hyun</b>, Y. Kim, J. Eom, J. Jewell, and A. Cherp (2021), “Feasibility of rapid decarbonization in a power sector with high coal dependence”
                             </li>
