--- a/teaching_21w.html
+++ b/teaching_21w.html
@@ -67,18 +67,22 @@
                         <nav class="site-navigation position-relative text-right" role="navigation">
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                <li><a href="ndex.html#home-section" class="nav-link">Home</a></li>
+                                <li><a href="index.html#home-section" class="nav-link">Home</a></li>
 
                                 <li class="has-children">
                                     <a href="index.html#about-section" class="nav-link">About Me</a>
                                     <ul class="dropdown">
-                                        <li><a href="ndex.html#education-section" class="nav-link">Education</a></li>
+                                        <li><a href="index.html#education-section" class="nav-link">Education</a></li>
                                     </ul>
                                 </li>
 
-                                <li><a href="index.html#publication-section" class="nav-link">Publications</a></li>
+                                <li class="has-children">
+                                    <a href="index.html#publication-section" class="nav-link">Publications</a>
 
-                                <li><a href="index.html#wp-section" class="nav-link">Working Papers</a></li>
+                                    <ul class="dropdown">
+                                        <li><a href="index.html#wp-section" class="nav-link">Working Papers</a></li>
+                                    </ul>
+                                </li>
 
                                 <li><a href="index.html#teaching-section" class="nav-link">Teaching</a></li>
 
